--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.6.2"
 description = "scrapy output testing framework"
 authors = ["granitosaurus <tinarg@protonmail.com>"]
 license = "GPL-3.0+"
+packages = [{ include = "scrapytest" }]
 
 [tool.poetry.dependencies]
 python = "^3.6"
